Window bypass - add testu and color theme for sensor

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -219,3 +219,4 @@ frontend:
             state-binary_sensor-window-on-color: "rgb(156, 39, 176)"
             state-binary_sensor-motion-on-color: "rgb(156, 39, 176)"
             state-binary_sensor-presence-on-color: "lightgreen"
+            state-binary_sensor-running-on-color: "orange"
