Issue #168 - Adds slow auto-new_slow_regulation Issue #169 - Adds support for Versatile Thermostat UI Card

--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -159,3 +159,4 @@ set_auto_regulation_mode:
                         - "Light"
                         - "Medium"
                         - "Strong"
+                        - "Slow"
