--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -160,3 +160,4 @@ set_auto_regulation_mode:
                         - "Medium"
                         - "Strong"
                         - "Slow"
+                        - "Expert"
