--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,11 @@
 				"ms-python.pylint",
 				"ferrierbenjamin.fold-unfold-all-icone",
 				"ms-python.isort",
-				"LittleFoxTeam.vscode-python-test-adapter"
+				"LittleFoxTeam.vscode-python-test-adapter",
+				"donjayamanne.githistory",
+				"waderyan.gitblame",
+				"keesschollaart.vscode-home-assistant",
+				"vscode.markdown-math"
 			],
 			// "mounts": [
 			//	"source=${localWorkspaceFolder}/.devcontainer/configuration.yaml,target=${localWorkspaceFolder}/config/www/community/,type=bind,consistency=cached",
