--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -43,6 +43,7 @@ set_preset_temperature:
                         - "eco"
                         - "comfort"
                         - "boost"
+                        - "frost"
                         - "eco_ac"
                         - "comfort_ac"
                         - "boost_ac"
