--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
     "python.testing.pytestEnabled": true,
     "python.analysis.extraPaths": [
     //    "/home/vscode/core",
-        "/workspaces/versatile_thermostat/custom_components/versatile_thermostat"
+        "/workspaces/versatile_thermostat/custom_components/versatile_thermostat",
+        "/home/vscode/.local/lib/python3.11/site-packages/homeassistant"
     ],
     "python.formatting.provider": "none"
 }
