Fonctional before testu. Miss the service call

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -168,6 +168,7 @@ recorder:
             - switch
             - climate
             - sensor
+            - binary_sensor
 
 template:
     - binary_sensor:
