FIX #341 - when window state change, open_valve_percent should be resend

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -168,6 +168,7 @@ climate:
       target_sensor: input_number.fake_temperature_sensor1
 
 recorder:
+    commit_interval: 1
     include:
         domains:
             - input_boolean
