--- a/.github/workflows/testus.yaml
+++ b/.github/workflows/testus.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_test.txt
+          pip3 install -r requirements_test.txt
 
       - name: Run Tests
         run: |
