--- a/.github/workflows/testus.yaml
+++ b/.github/workflows/testus.yaml
@@ -26,4 +26,12 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest tests
+          pytest \
+            -qq \
+            --timeout=9 \
+            --durations=10 \
+            -n auto \
+            --cov custom_components.integration_blueprint \
+            -o console_output_style=count \
+            -p no:sugar \
+            tests
