--- a/.github/workflows/testus.yaml
+++ b/.github/workflows/testus.yaml
@@ -31,7 +31,12 @@ jobs:
             --timeout=9 \
             --durations=10 \
             -n auto \
-            --cov custom_components.integration_blueprint \
             -o console_output_style=count \
             -p no:sugar \
             tests
+
+      - name: Coverage
+        run: |
+          coverage run -m pytest tests/
+          coverage report
+          coverage html
