Feature 234 add central boiler helper (#352)
* Creation of the central boiler config + binary_sensor entity

* Fonctional before testu. Miss the service call

* Full featured but without testu

* Documentation and release.

* Add events in README

* FIX #341 - when window state change, open_valve_percent should be resend

* Issue #343 - disable safety mode for outdoor thermometer

* Issue #255 - Specify window action on window open detection

* Add en and string translation

* central boiler - add entites to fine tune the boiler start

* With testu ok

* Add testus for valve and climate

* Add testus in pipelines

* With pip 3

* With more pytest options

* Ass coverage tests

* Add coverage report in github

* Release 5.3.0

---------

Co-authored-by: Jean-Marc Collin <jean-marc.collin-extern@renault.com>

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -28,6 +28,8 @@ versatile_thermostat:
         max_alpha: 0.6
         halflife_sec: 301
         precision: 3
+    safety_mode:
+        check_outdoor_sensor: false
 
 input_number:
     fake_temperature_sensor1:
@@ -66,6 +68,13 @@ input_number:
         max: 90
         icon: mdi:pipe-valve
         unit_of_measurement: percentage
+    fake_boiler_temperature:
+        name: Central thermostat temp
+        min: 0
+        max: 30
+        icon: mdi:thermostat
+        unit_of_measurement: °C
+        mode: box
 
 input_boolean:
     # input_boolean to simulate the windows entity. Only for development environment.
@@ -161,6 +170,7 @@ climate:
       target_sensor: input_number.fake_temperature_sensor1
 
 recorder:
+    commit_interval: 1
     include:
         domains:
             - input_boolean
@@ -168,6 +178,7 @@ recorder:
             - switch
             - climate
             - sensor
+            - binary_sensor
 
 template:
     - binary_sensor:
