Remove github pages deployment

--- a/.github/workflows/testus.yaml
+++ b/.github/workflows/testus.yaml
@@ -42,9 +42,8 @@ jobs:
 
       - name: Generate HTML Coverage Report
         run: coverage html
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./htmlcov
+      # - name: Deploy to GitHub Pages
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./htmlcov
