--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,9 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 // "image": "ghcr.io/ludeeus/devcontainer/integration:latest",
 {
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
 	"name": "Versatile Thermostat integration",
 	"appPort": [
 		"8123:8123"
