--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,14 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Home Assistant (debug)",
-      "type": "python",
-      "request": "launch",
-      "module": "homeassistant",
-      "justMyCode": false,
-      "args": [
-          "--debug",
-          "-c",
-          "config"
-      ]
-    }
-  ]
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Home Assistant (debug)",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "homeassistant",
+            "justMyCode": false,
+            "args": ["--debug", "-c", "config"]
+        }
+    ]
 }
