--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,7 @@
     "files.associations": {
         "*.yaml": "home-assistant"
     },
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
+    "python.testing.pytestArgs": [],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.analysis.extraPaths": [
@@ -18,5 +16,6 @@
         "/workspaces/versatile_thermostat/custom_components/versatile_thermostat",
         "/home/vscode/.local/lib/python3.12/site-packages/homeassistant"
     ],
+    "python.experiments.optOutFrom": ["pythonTestAdapter"],
     "python.formatting.provider": "none"
 }
