--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,15 +8,12 @@
     "files.associations": {
         "*.yaml": "home-assistant"
     },
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
+    "python.testing.pytestArgs": [],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.analysis.extraPaths": [
     //    "/home/vscode/core",
         "/workspaces/versatile_thermostat/custom_components/versatile_thermostat",
-        "/home/vscode/.local/lib/python3.11/site-packages/homeassistant"
-    ],
-    "python.formatting.provider": "none"
+        "/home/vscode/.local/lib/python3.12/site-packages/homeassistant"
+    ]
 }
