--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -1,11 +1,11 @@
 default_config:
 
 logger:
-    default: info
+    default: warning
     logs:
-        custom_components.versatile_thermostat: debug
-        custom_components.versatile_thermostat.underlyings: debug
-        custom_components.versatile_thermostat.climate: debug
+    #    custom_components.versatile_thermostat: debug
+    #    custom_components.versatile_thermostat.underlyings: debug
+    #    custom_components.versatile_thermostat.climate: debug
 
 # If you need to debug uncommment the line below (doc: https://www.home-assistant.io/integrations/debugpy/)
 debugpy:
