[#429] - VTherm doesn't respect target temperature

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -3,10 +3,12 @@ default_config:
 logger:
     default: warning
     logs:
-       custom_components.versatile_thermostat: info
-       custom_components.versatile_thermostat.underlyings: info
-       custom_components.versatile_thermostat.climate: info
-       custom_components.versatile_thermostat.base_thermostat: debug
+       custom_components.versatile_thermostat: debug
+       # custom_components.versatile_thermostat.underlyings: info
+       # custom_components.versatile_thermostat.climate: info
+       # custom_components.versatile_thermostat.base_thermostat: debug
+       custom_components.versatile_thermostat.sensor: info
+       custom_components.versatile_thermostat.binary_sensor: info
 
 # If you need to debug uncommment the line below (doc: https://www.home-assistant.io/integrations/debugpy/)
 debugpy:
@@ -175,7 +177,7 @@ input_datetime:
         has_time: true
 
 recorder:
-    commit_interval: 1
+    commit_interval: 0
     include:
         domains:
             - input_boolean
@@ -184,6 +186,9 @@ recorder:
             - climate
             - sensor
             - binary_sensor
+            - number
+            - input_select
+            - versatile_thermostat
 
 template:
     - binary_sensor:
