--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -1,14 +1,30 @@
 default_config:
 
+recorder:
+    auto_purge: true
+    purge_keep_days: 1
+    commit_interval: 5
+    include:
+        domains:
+            - input_boolean
+            - input_number
+            - switch
+            - climate
+            - sensor
+            - binary_sensor
+            - number
+            - input_select
+            - versatile_thermostat
+
 logger:
     default: warning
     logs:
-       custom_components.versatile_thermostat: debug
-       # custom_components.versatile_thermostat.underlyings: info
-       # custom_components.versatile_thermostat.climate: info
-       # custom_components.versatile_thermostat.base_thermostat: debug
-       custom_components.versatile_thermostat.sensor: info
-       custom_components.versatile_thermostat.binary_sensor: info
+        custom_components.versatile_thermostat: debug
+        # custom_components.versatile_thermostat.underlyings: info
+        # custom_components.versatile_thermostat.climate: info
+        # custom_components.versatile_thermostat.base_thermostat: debug
+        custom_components.versatile_thermostat.sensor: info
+        custom_components.versatile_thermostat.binary_sensor: info
 
 # If you need to debug uncommment the line below (doc: https://www.home-assistant.io/integrations/debugpy/)
 debugpy:
@@ -175,20 +191,6 @@ input_datetime:
         icon: mdi:update
         has_date: true
         has_time: true
-
-recorder:
-    commit_interval: 0
-    include:
-        domains:
-            - input_boolean
-            - input_number
-            - switch
-            - climate
-            - sensor
-            - binary_sensor
-            - number
-            - input_select
-            - versatile_thermostat
 
 template:
     - binary_sensor:
