Issue #615 - VTherm switch to manual on its own

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -152,6 +152,7 @@ climate:
       name: Underlying thermostat2
       heater: input_boolean.fake_heater_switch3
       target_sensor: input_number.fake_temperature_sensor1
+      ac_mode: false
     - platform: generic_thermostat
       name: Underlying thermostat3
       heater: input_boolean.fake_heater_switch3
