--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -91,6 +91,48 @@ input_number:
         icon: mdi:thermostat
         unit_of_measurement: °C
         mode: box
+    fake_offset_calibration1:
+        name: Sonoff offset calibration 1
+        min: -12
+        max: 12
+        icon: mdi:tune
+        unit_of_measurement: °C
+        mode: box
+    fake_opening_degree1:
+        name: Sonoff Opening degree 1
+        min: 0
+        max: 100
+        icon: mdi:valve-open
+        unit_of_measurement: "%"
+        mode: box
+    fake_closing_degree1:
+        name: Sonoff Closing degree 1
+        min: 0
+        max: 100
+        icon: mdi:valve-closed
+        unit_of_measurement: "%"
+        mode: box
+    fake_offset_calibration2:
+        name: Sonoff offset calibration 2
+        min: -12
+        max: 12
+        icon: mdi:tune
+        unit_of_measurement: °C
+        mode: box
+    fake_opening_degree2:
+        name: Sonoff Opening degree 2
+        min: 0
+        max: 100
+        icon: mdi:valve-open
+        unit_of_measurement: "%"
+        mode: box
+    fake_closing_degree2:
+        name: Sonoff Closing degree 2
+        min: 0
+        max: 100
+        icon: mdi:valve-closed
+        unit_of_measurement: "%"
+        mode: box
 
 input_boolean:
     # input_boolean to simulate the windows entity. Only for development environment.
@@ -142,6 +184,12 @@ input_boolean:
     fake_presence_sensor1:
         name: Presence Sensor 1
         icon: mdi:home
+    fake_valve_sonoff_trvzb1:
+        name: Valve Sonoff TRVZB1
+        icon: mdi:valve
+    fake_valve_sonoff_trvzb2:
+        name: Valve Sonoff TRVZB2
+        icon: mdi:valve
 
 climate:
     - platform: generic_thermostat
@@ -185,6 +233,16 @@ climate:
       name: Underlying thermostat9
       heater: input_boolean.fake_heater_switch3
       target_sensor: input_number.fake_temperature_sensor1
+    - platform: generic_thermostat
+      name: Underlying Sonoff TRVZB1
+      heater: input_boolean.fake_valve_sonoff_trvzb1
+      target_sensor: input_number.fake_temperature_sensor1
+      ac_mode: false
+    - platform: generic_thermostat
+      name: Underlying Sonoff TRVZB2
+      heater: input_boolean.fake_valve_sonoff_trvzb2
+      target_sensor: input_number.fake_temperature_sensor1
+      ac_mode: false
 
 input_datetime:
     fake_last_seen:
@@ -238,14 +296,14 @@ switch:
               friendly_name: "Pilote chauffage SDB RDC"
               value_template: "{{ is_state_attr('switch_seche_serviettes_sdb_rdc', 'sensor_state', 'on') }}"
               turn_on:
-                  service: select.select_option
+                  action: select.select_option
                   data:
                       option: comfort
                   target:
                       entity_id: select.seche_serviettes_sdb_rdc_cable_outlet_mode
 
               turn_off:
-                  service: select.select_option
+                  action: select.select_option
                   data:
                       option: comfort-2
                   target:
