Add safety feature_safety_manager Rename config attribute from security_ to safety_

--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -76,7 +76,7 @@ set_preset_temperature:
                     unit_of_measurement: °
                     mode: slider
 
-set_security:
+set_safety:
     name: Set safety
     description: Change the safety parameters
     target:
