--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,2 +1,2 @@
 FROM mcr.microsoft.com/devcontainers/python:1-3.13
-RUN apt update && apt install -y ffmpeg
+RUN apt update && apt install -y ffmpeg libturbojpeg0-dev
