Add github copilot Add first test ok for UnderlyingSwitch

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,7 +37,9 @@
                 "yzhang.markdown-all-in-one",
                 "github.vscode-github-actions",
                 "azuretools.vscode-docker",
-                "huizhou.githd"
+                "huizhou.githd",
+                "github.copilot",
+                "github.copilot-chat"
             ],
             "settings": {
                 "files.eol": "\n",
