--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,19 +12,14 @@ jobs:
       - uses: actions/checkout@v1
       - name: "Set version number"
         run: |
-          sed -i '/  "version": /c\  "version": "${{ github.ref }}"' custom_components/versatile_thermostat/manifest.json
-          sed -i 's|heads/tags/||' custom_components/versatile_thermostat/manifest.json
-          sed -i 's|refs/tags/||' custom_components/versatile_thermostat/manifest.json
+          yq -i -o json '.version="${{ github.event.release.tag_name }}"' \
+            "${{ github.workspace }}/custom_components/versatile_thermostat/manifest.json"
       # Pack the HACS dir as a zip and upload to the release
       - name: ZIP Versatile Thermostat Dir
         run: |
-          cd /home/runner/work/versatile_thermostat/versatile_thermostat/custom_components/versatile_thermostat
+          cd "${{ github.workspace }}/custom_components/versatile_thermostat"
           zip versatile_thermostat.zip -r ./
       - name: Upload zip to release
-        uses: svenstaro/upload-release-action@v1-release
+        uses: softprops/action-gh-release@v2.2.1
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: /home/runner/work/versatile_thermostat/versatile_thermostat/custom_components/versatile_thermostat/versatile_thermostat.zip
-          asset_name: versatile_thermostat.zip
-          tag: ${{ github.ref }}
-          overwrite: true
+          files: ${{ github.workspace }}/custom_components/versatile_thermostat/versatile_thermostat.zip
