--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,6 +29,6 @@ jobs:
         - uses: "actions/checkout@v3.5.2"
         - uses: "actions/setup-python@v4.6.0"
           with:
-            python-version: "3.x"
+            python-version: "3.13"
         - run: python3 -m pip install black
         - run: black .
