--- a/custom_components/versatile_thermostat/manifest.json
+++ b/custom_components/versatile_thermostat/manifest.json
@@ -14,6 +14,6 @@
   "quality_scale": "silver",
   "requirements": [],
   "ssdp": [],
-  "zeroconf": [],
-  "version": "7.2.3"
+  "version": "7.2.6",
+  "zeroconf": []
 }
