Add test to check issue. All is ok now

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -8,6 +8,7 @@
     "reportOptionalMemberAccess": false,
     "reportAssignmentType": "warning",
     "reportIncompatibleVariableOverride": "warning",
+    "reportIncompatibleMethodOverride": "warning",
     "executionEnvironments": [
         {
             "root": "tests",
