--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -9,6 +9,8 @@
     "reportAssignmentType": "warning",
     "reportIncompatibleVariableOverride": "warning",
     "reportIncompatibleMethodOverride": "warning",
+    "reportAttributeAccessIssue": "warning",
+    "reportArgumentType": "warning",
     "executionEnvironments": [
         {
             "root": "tests",
