Add test to check issue. All is ok now (#1044)
* Add test to check issue. All is ok now

* Fix In central mode "heat only", VTherm does not get back to "heat" after window has been closed #1008

---------

Co-authored-by: Jean-Marc Collin <jean-marc.collin-extern@renault.com>

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -8,6 +8,9 @@
     "reportOptionalMemberAccess": false,
     "reportAssignmentType": "warning",
     "reportIncompatibleVariableOverride": "warning",
+    "reportIncompatibleMethodOverride": "warning",
+    "reportAttributeAccessIssue": "warning",
+    "reportArgumentType": "warning",
     "executionEnvironments": [
         {
             "root": "tests",
