--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "files.associations": {
         "*.yaml": "home-assistant"
     },
-    "python.testing.pytestArgs": [],
+    "python.testing.pytestArgs": [
+        "-vv"
+    ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.analysis.extraPaths": [
