#1001 - Add service.yaml file

--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -184,3 +184,10 @@ set_auto_fan_mode:
                         - "Medium"
                         - "High"
                         - "Turbo"
+
+set_hvac_mode_sleep:
+    name: Set HVAC Mode to Sleep
+    description: Turns a VTherm climate into seasonal sleep - OFF with valve 100% open (only for VTherm over climate with valve regulation).
+    target:
+        entity:
+            integration: versatile_thermostat
